# attendance-software

./: .dockerignore  .gitignore  Dockerfile  fly.toml  pyproject.toml
backend/: db.sqlite3
backend/accounts/: admin.py  managers.py  models.py  urls.py
backend/accounts/migrations/: 0001_initial.py  0002_user_name.py  0003_alter_user_role.py
backend/accounts/templates/registration/: login.html
backend/attendance/: admin.py  apps.py  models.py  signals.py
backend/attendance/migrations/: 0001_initial.py  0002_remove_attendance_unique_enrollment_date_and_more.py
backend/classes/: admin.py  models.py  urls.py  views.py
backend/classes/migrations/: 0001_initial.py
backend/classes/templates/classes/: dashboard.html  mark_attendance.html  search_student.html
backend/core/: settings.py  urls.py  views.py
backend/enrollments/: admin.py  models.py
backend/enrollments/migrations/: 0001_initial.py
backend/students/: admin.py  models.py  urls.py  views.py
backend/students/migrations/: 0001_initial.py  0002_remove_student_fathers_name_and_more.py
backend/students/templates/students/: dashboard.html  dashboard_profile.html  enrollments_details.html  student_enrollments.html
backend/templates/: base.html
