[project]
name = "attendance-software"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crispy-bootstrap4>=2026.2",
    "django>=6.0.5",
    "django-crispy-forms>=2.6",
    "psycopg2-binary>=2.9.12",
    "python-dotenv>=1.2.2",
    "gunicorn>=21.2.0",
    "whitenoise>=6.6.0",
]
